@@ -333,6 +333,7 @@
             <li>Roman - Fixed bug 3546093: Type resolution very slow for big project.</li>
             <li>Florian Bauer - Add C# support for CPD.</li>
             <li>Matthew Short - Support in CPD for IgnoreAnnotations and SuppressWarnings("CPD-START").</li>
+            <li>Yiannis Paschalidis - Fixed bug #968 Issues with JUnit4 @Test annotation with expected exception</li>
         </ul>
         </subsection>
         <subsection name="Organizations">
