@@ -253,4 +253,22 @@ public class AssertTest {
 }
      ]]></code>
     </test-code>
+
+    <test-code>
+        <description>#968 Issues with JUnit4 @Test annotation with expected exception</description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+import org.junit.Test;
+public class Foo_Test
+{
+    /** Tests that doSomething throws an exception if arg is negative */
+    @Test(expected = IllegalArgumentException.class)
+    public  void testDoSomethingFail()
+    {
+        new Foo().doSomething(-1);
+        // Note - no assert is needed as we expect an exception (which is basically an assert).
+    }
+}
+        ]]></code>
+    </test-code>
 </test-data>
